# artenic_ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.dev.yml  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
dashboard/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/__tests__/components/: badge.test.tsx  breadcrumb.test.tsx  data-table.test.tsx  skeleton.test.tsx  tooltip.test.tsx
dashboard/src/__tests__/hooks/: use-models.test.tsx
dashboard/src/__tests__/lib/: api-client.test.ts  format.test.ts
dashboard/src/__tests__/pages/: overview.test.tsx
dashboard/src/components/charts/: area-chart.tsx  bar-chart.tsx  line-chart.tsx
dashboard/src/components/layout/: header.tsx  page-shell.tsx  sidebar-context.tsx  sidebar.tsx
dashboard/src/components/ui/: badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  data-table.tsx  detail-row.tsx  dialog.tsx  empty-state.tsx  error-state.tsx  input.tsx  json-editor.tsx  skeleton.tsx  spinner.tsx  status-dot.tsx  toast.tsx  tooltip.tsx
dashboard/src/hooks/: use-ab-tests.ts  use-activity.ts  use-budgets.ts  use-datasets.ts  use-ensembles.ts  use-health.ts  use-inference.ts  use-models.ts  use-providers.ts  use-settings.ts  use-training.ts
dashboard/src/lib/: api-client.ts  constants.ts  format.ts  query-keys.ts
dashboard/src/mocks/: ab-tests.ts  activity.ts  budgets.ts  datasets.ts  ensembles.ts  handlers.ts  health.ts  models.ts  providers.ts  settings.ts  training.ts
dashboard/src/pages/: overview.tsx
dashboard/src/pages/ab-tests/: ab-test-create-dialog.tsx  ab-test-detail.tsx  ab-tests-list.tsx
dashboard/src/pages/budgets/: budget-create-dialog.tsx  budgets-list.tsx
dashboard/src/pages/datasets/: dataset-create-dialog.tsx  dataset-detail.tsx  datasets-list.tsx
dashboard/src/pages/ensembles/: ensemble-create-dialog.tsx  ensemble-detail.tsx  ensembles-list.tsx
dashboard/src/pages/health/: health-page.tsx
dashboard/src/pages/inference/: inference-playground.tsx
dashboard/src/pages/models/: model-detail.tsx  model-register-dialog.tsx  models-list.tsx
dashboard/src/pages/providers/: provider-configure-dialog.tsx  provider-detail.tsx  provider-logos.tsx  provider-onboarding.tsx  providers-list.tsx
dashboard/src/pages/settings/: settings-page.tsx
dashboard/src/pages/training/: training-detail.tsx  training-dispatch-dialog.tsx  training-list.tsx
dashboard/src/types/: api.ts
tests/: conftest.py
